# Project-RTC-Kel6

./: README.md
fire_SVM/: Cargo.toml
fire_SVM/src/: main.rs
fire_SVM/src/knn_fire/: knn.rs
fire_SVM/src/svm_fire/: svm.rs
fire_detection/: Cargo.toml  qt_frontend.py  results.json
fire_detection/data/: fire_detection.csv
fire_detection/src/: data.rs  main.rs  model.rs  utils.rs
fire_detection_nn/: Cargo.toml
fire_detection_nn/src/: main.rs
trigonometri/: Cargo.toml
trigonometri/src/: lookup.rs  main.rs  taylor.rs
