[package]
name = "fire_detection"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
csv = "1.2.2"
serde = { version = "1.0.171", features = ["derive"] }
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
serde_json = "1.0"
bincode = "1.3.3"
